--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
 <section class="container">
   <app-diretivas-customizadas></app-diretivas-customizadas>
 </section>
+
+<section class="container">
+  <app-ngstyle></app-ngstyle>
+</section>
+
+<section class="container">
+  <app-ngclass></app-ngclass>
+</section>
 <router-outlet></router-outlet>
