DIretiva Ng Else

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
-<section class="container">
+<section class="container mt-5">
   <app-diretivas-customizadas></app-diretivas-customizadas>
 </section>
 
-<section class="container">
+<!-- <section class="container">
   <app-ngstyle></app-ngstyle>
-</section>
+</section> -->
 
-<section class="container">
+<!-- <section class="container">
   <app-ngclass></app-ngclass>
-</section>
+</section> -->
 <router-outlet></router-outlet>
